@@ -215,20 +215,19 @@ public class Transformer {
     return result;
   }
 
-  private boolean where(Match where, Object sourceNode) throws JsonProcessingException {
-    for (Where property : where.getWhere()) {
+  private boolean where(Match match, Object sourceNode) throws JsonProcessingException {
+    Where property= match.getWhere();
       Object sourceValue = sourceTranslator.getPropertyValue(sourceNode, property.getId());
       if (property.getValue() != null && property.getValue().equals(sourceValue))
         return true;
-    }
     return false;
   }
 
   public Object getListItems(List<?> source, ListMode listMode) {
     if (listMode == ListMode.FIRST)
-      return source.get(0);
+      return source.getFirst();
     else if (listMode == ListMode.REST) {
-      source.remove(0);
+      source.removeFirst();
       return source;
     } else
       return source;
